fixed menu buttons not able to be clicked (z-index)

--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ html, body {
   position: absolute;
   top: 0;
   left: 10px;
-  z-index: -1;
+  z-index: 0;
   width: 40px;
 
   display: flex;
@@ -157,6 +157,7 @@ touch-icon {
 }
 
 #info-section {
+  z-index: 1;
   width: 100%;
   flex: 2;
   display: flex;
@@ -179,8 +180,6 @@ touch-icon {
   width: 65%;
 
   text-align: center;
-
-  background: var(--purple);
 
   padding: 10px 0;
   margin: 0 auto;
